<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".yemek.YemekEkle">

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="180dp"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="Sipariş Adedi :"
        android:textColor="#665A7C"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etAdedi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFiyat"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="180dp"
        android:ems="10"
        android:inputType="none"
        android:editable="false"
        android:text="İçeriği:"
        android:textColor="#665A7C"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etIcerigi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIsim"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etIsim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/yemek_ismi"
        android:inputType="text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#4CAF50"
        android:textColorHint="#4CAF50"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/edLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="180dp"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="İsim:"
        android:textColor="#665A7C"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etIsim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etIcerigi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/yemek_icerigi"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textColorHint="#4CAF50"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="180dp"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="Fiyatı:"
        android:textColor="#665A7C"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etFiyat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIcerigi"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etFiyat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/yemek_fiyat"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textColorHint="#4CAF50"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <EditText
        android:id="@+id/etAdedi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/siparis_adedi"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textColorHint="#4CAF50"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdateStock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <Button
        android:id="@+id/btnUpdateStock"
        android:layout_width="121dp"
        android:layout_height="36dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/yemek_ekle"
        android:textColor="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/bChooseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Resim Seçin"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIsim"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/ivYemek"
        android:layout_width="184dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bChooseImage"
        app:layout_constraintTop_toBottomOf="@+id/etIsim"
        app:layout_constraintVertical_bias="0.555"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnYemekSil"
        android:layout_width="91dp"
        android:layout_height="34dp"
        android:text="SİL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toEndOf="@+id/btnUpdateStock"
        app:layout_constraintTop_toBottomOf="@+id/etAdedi"
        app:layout_constraintVertical_bias="0.578" />

</androidx.constraintlayout.widget.ConstraintLayout>